# Mensarius

./: README.md  README.rst  pyproject.toml
src/tests/: test_dummy.py
