[tool.poetry]
name = "mensarius"
version = "0.1"
description = "Simple financial accounting tool based on FastAPI framework"
authors = ["Titanium Hocker <inbox@titaniumhocker.ru>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.19"
fastapi = "^0.61.1"
typer = "^0.3.2"
alembic = "^1.4.2"
sqlalchemy-utils = "^0.36.8"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mypy = "^0.782"
pytest-cov = "^2.10.1"
pylint = "^2.6.0"
jedi = "^0.17.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
